--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,7 +36,9 @@
         </main>
 
         <footer class="mt-auto text-white-50">
-            <p>&copy; 2023 Discover </p>
+        
+            <p>&copy; <span id="currentYear"></span> Discover </p>
+        
         </footer>
 
 
@@ -49,9 +51,15 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
         integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
         crossorigin="anonymous"></script>
+        <script>
+            // Get the current year
+            var currentYear = new Date().getFullYear();
+          
+            // Update the content of the span element with the current year
+            document.getElementById("currentYear").textContent = currentYear;
+          </script>
 </body>
 
 </html>
 
 
-    
